# flutter2nix

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  devenv.nix  devenv.yaml  flake.nix
.omc/: notepad.md
.zed/: settings.json
benchmarks/: BENCHMARKS.md  (+1 more)
crates/flutter2nix/: Cargo.toml
crates/flutter2nix/src/: compose.rs  detect.rs  lib.rs  lockfile.rs  lockfile_tests.rs  main.rs  sdk.rs
crates/flutter2nix/src/cli/: build.rs  check.rs  lock.rs  mod.rs
crates/flutter2nix/src/pub_deps/: codegen.rs  mod.rs  resolver.rs
crates/flutter2nix/tests/: cli_tests.rs
crates/flutter2nix/tests/fixtures/flutter-projects/real-android-flutter/: pubspec.yaml
crates/flutter2nix/tests/fixtures/flutter-projects/real-android-flutter/android/: settings.gradle.kts
crates/flutter2nix/tests/fixtures/flutter-projects/simple-android-flutter/: pubspec.yaml
crates/flutter2nix/tests/fixtures/flutter-projects/simple-android-flutter/android/: build.gradle.kts
crates/gradle2nix/: Cargo.toml  build.rs
crates/gradle2nix/src/: lib.rs  lockfile.rs  lockfile_tests.rs  main.rs  maven.rs  maven_tests.rs  resolve_cache.rs  resolve_cache_tests.rs
crates/gradle2nix/src/cli/: check.rs  generate.rs  lock.rs  mod.rs
crates/gradle2nix/src/tapi/: jar_source.rs  mod.rs  model.rs  model_tests.rs  shim.rs  shim_tests.rs
crates/gradle2nix/tapi-shim/: .gitignore
crates/gradle2nix/tests/: check_flutter_sdk_tests.rs  cli_tests.rs  relocate_plugins_tests.rs  strip_dev_deps_tests.rs
crates/gradle2nix/tests/fixtures/: README.md  tapi-schema.json
crates/gradle2nix/tests/fixtures/gradle-projects/android-discovery-app/: .gradle2nix-tapi-output.json
crates/gradle2nix/tests/fixtures/gradle-projects/android-simple-app/: .gradle2nix-tapi-output.json  local.properties.example  settings.gradle.kts
crates/gradle2nix/tests/fixtures/gradle-projects/android-simple-app/app/: build.gradle.kts
crates/gradle2nix/tests/fixtures/gradle-projects/multi-module-2level/: .gradle2nix-tapi-output.json  settings.gradle
crates/gradle2nix/tests/fixtures/gradle-projects/multi-module-2level/app/: build.gradle
crates/gradle2nix/tests/fixtures/gradle-projects/multi-module-2level/lib/: build.gradle
crates/gradle2nix/tests/fixtures/gradle-projects/real-simple-app/: settings.gradle.kts
crates/gradle2nix/tests/fixtures/gradle-projects/real-simple-app-gradle9/: settings.gradle.kts
crates/gradle2nix/tests/fixtures/gradle-projects/with-buildscript/: .gradle2nix-tapi-output.json  build.gradle.kts  settings.gradle.kts
crates/gradle2nix/tests/fixtures/gradle-projects/with-classifiers/: .gradle2nix-tapi-output.json  build.gradle  settings.gradle
crates/gradle2nix/tests/fixtures/lockfiles/: complex-20-deps.json  malformed-invalid-json.json  malformed-missing-sha256.json  simple-2-deps-stale.json  simple-2-deps.json
crates/gradle2nix/tests/fixtures/maven-coords/: android-annotation.txt  jackson-databind.txt  kotlin-multiplatform.txt  legacy-format.txt  special-chars-group.txt  with-aar-extension.txt  with-classifier.txt
crates/gradle2nix/tests/fixtures/nix-outputs/: kotlin-jvm-inline.nix  simple-2-deps-flake.nix  simple-2-deps-inline.nix  with-classifiers-inline.nix
crates/gradle2nix/tests/fixtures/tapi-outputs/: basic.json  malformed-unknown-fields.json  version-mismatch.json  with-test-scope.json
crates/ios2nix/: Cargo.toml
crates/ios2nix/src/: cocoapods.rs  cocoapods_tests.rs  export_opts.rs  export_opts_tests.rs  keychain.rs  keychain_tests.rs  lib.rs  lockfile.rs  lockfile_tests.rs  main.rs  main_tests.rs  podspec.rs  podspec_tests.rs  provisioning.rs  provisioning_tests.rs  resolve_cache.rs  resolve_cache_tests.rs
crates/ios2nix/src/cli/: archive.rs  archive_tests.rs  build.rs  build_tests.rs  check.rs  check_tests.rs  export.rs  export_tests.rs  generate.rs  generate_tests.rs  lock.rs  lock_tests.rs  mod.rs  sign.rs  sign_setup.rs  sign_tests.rs  tests.rs
crates/ios2nix/src/xcode/: assert.rs  assert_tests.rs  build_output.rs  build_output_tests.rs  env.rs  env_tests.rs  mod.rs  tests.rs
crates/ios2nix/tests/: cli_tests.rs
crates/ios2nix/tests/fixtures/: README.md  xcode-schema.json
crates/ios2nix/tests/fixtures/cocoapods-specs/: firebase-core.json  flutter.json  mbprogresshud-git.json  realm.json
crates/ios2nix/tests/fixtures/nix-outputs/: complex-20-pods-modular.nix  simple-2-pods-inline.nix  subspec-quoting-inline.nix
crates/ios2nix/tests/fixtures/provisioning-profiles/: adhoc-decoded.plist  adhoc-profile.mobileprovision  enterprise-profile.mobileprovision
crates/ios2nix/tests/fixtures/sidecars/: simple.ios2nix-podspecs.json
crates/ios2nix/tests/fixtures/xcode-outputs/: basic.json  malformed-missing-field.json  malformed-unknown-fields.json  version-mismatch.json  with-code-signing.json  with-frameworks.json
crates/ios2nix/tests/fixtures/xcode-projects/native-app/ExportTest.xcodeproj/: project.pbxproj
crates/ios2nix/tests/fixtures/xcode-projects/pwa-wrapper-app/: Podfile
crates/nix-core/: Cargo.toml
crates/nix-core/src/: dep.rs  lib.rs  lockfile.rs  lockfile_tests.rs
crates/nix-core/src/codegen/: cocoapods.rs  cocoapods_tests.rs  maven.rs  maven_tests.rs  mod.rs  nix_writer.rs  pub_deps.rs
tools/fnx/: Cargo.toml
tools/fnx/src/: main.rs  nixutil.rs
tools/fnx/src/cmd/: bench.rs  build.rs  check.rs  fmt.rs  lock.rs  mod.rs  shell.rs  signing_e2e.rs  signing_e2e_tests.rs  test.rs
(+59 files in other folders)
