[package]
name = "gradle2nix"
version.workspace = true
edition.workspace = true
description = "Gradle/Maven dependency materialiser for Nix via Gradle Tooling API"
license = "MIT"

[[bin]]
name = "gradle2nix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix-core = { path = "../nix-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
