[package]
name = "ios2nix"
version.workspace = true
edition.workspace = true
description = "End-to-end iOS/Xcode orchestration for reproducible Nix builds"
license = "MIT"

[[bin]]
name = "ios2nix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix-core = { path = "../nix-core" }
serde_json = "1"
