[package]
name = "ios2nix"
version.workspace = true
edition.workspace = true
description = "End-to-end iOS/Xcode orchestration for reproducible Nix builds"
license = "MIT"

[lib]
name = "ios2nix"
path = "src/lib.rs"

[[bin]]
name = "ios2nix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix-core = { path = "../nix-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
sha2 = "0.10"
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
log = "0.4"
plist = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
mockito = "0.31"
tempfile = "3"
