[package]
name = "nix-core"
version.workspace = true
edition.workspace = true
description = "Shared dependency model and Nix expression codegen for flutter2nix tools"
license = "MIT"

[lib]
name = "nix_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
